--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,89 @@
 absl-py==0.11.0
+appdirs==1.4.4
 astunparse==1.6.3
+atpublic==2.1.1
 cached-property==1.5.2
 cachetools==4.1.1
 certifi==2020.11.8
 chardet==3.0.4
+colorama==0.4.4
+commonmark==0.9.1
+configobj==5.0.6
+decorator==4.4.2
+dictdiffer==0.8.1
+distro==1.5.0
+dpath==2.0.1
+dulwich==0.20.13
+dvc==1.10.2
+flatten-dict==0.3.0
+flufl.lock==3.2
+ftfy==5.8
+funcy==1.15
+future==0.18.2
 gast==0.3.3
+gitdb==4.0.5
+GitPython==3.1.11
 google-auth==1.23.0
 google-auth-oauthlib==0.4.2
 google-pasta==0.2.0
+grandalf==0.6
 grpcio==1.33.2
 h5py==2.10.0
 idna==2.10
 importlib-metadata==3.1.0
+jsonpath-ng==1.5.2
 Keras==2.4.3
 Keras-Preprocessing==1.1.2
+mailchecker==3.3.17
 Markdown==3.3.3
+nanotime==0.5.2
+networkx==2.4
 numpy==1.18.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
+packaging==20.4
+pathlib2==2.3.5
+pathspec==0.8.1
+phonenumbers==8.12.13
 Pillow==8.0.1
+ply==3.11
 protobuf==3.14.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pydot==1.4.1
+Pygments==2.7.2
+pygtrie==2.3.2
+pyparsing==2.4.7
+python-benedict==0.22.0
+python-dateutil==2.8.1
+python-slugify==4.0.1
 PyYAML==5.3.1
 requests==2.25.0
 requests-oauthlib==1.3.0
+rich==9.2.0
 rsa==4.6
+ruamel.yaml==0.16.12
+ruamel.yaml.clib==0.2.2
 scipy==1.5.4
+shortuuid==1.0.1
+shtab==1.3.2
 six==1.15.0
+smmap==3.0.4
+tabulate==0.8.7
 tensorboard==2.4.0
 tensorboard-plugin-wit==1.7.0
 tensorflow==2.3.1
 tensorflow-estimator==2.3.0
 termcolor==1.1.0
+text-unidecode==1.3
+toml==0.10.2
+tqdm==4.53.0
+typing-extensions==3.7.4.3
 urllib3==1.26.2
+voluptuous==0.12.0
+wcwidth==0.2.5
 Werkzeug==1.0.1
 wrapt==1.12.1
+xmltodict==0.12.0
+zc.lockfile==2.0
 zipp==3.4.0
